--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     container_name: 'nginx'
     command: /bin/sh -c "envsubst '$$APP_PUBLIC_PATH' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
     volumes:
-      - './volumes/app:${APP_PATH}'
+      - './volumes/app:${APP_PATH}:ro'
       - './volumes/nginx/logs:/var/log/nginx'
       # Config
       - './images/nginx/default.conf.template:/etc/nginx/conf.d/default.conf.template'
@@ -40,7 +40,7 @@ services:
     container_name: 'php'
     volumes:
       # App
-      - './volumes/app:${APP_PATH}'
+      - './volumes/app:${APP_PATH}:rw,cached'
       # PHP Config
       - './images/php/00-user.ini:/usr/local/etc/php/conf.d/00-user.ini'
       - './images/php/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini'
