--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,7 +5,7 @@ services:
     image: 'mailhog/mailhog:latest'
     container_name: 'mailhog'
     volumes:
-      - './volumes/mailhog/maildir:/maildir'
+      - './volumes/mailhog/maildir:/maildir:rw,delegated'
     environment:
       MH_STORAGE: maildir
     ports:
