--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,8 +46,8 @@ services:
       - './images/php/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini'
     environment:
       # Symfony Dotenv never overwrites existing environment variables
-      APP_ENV: ${APP_ENV}
-      APP_DEBUG: ${APP_DEBUG}
+      # APP_ENV: dev
+      # APP_DEBUG: 1
       APP_SECRET: EDITME
       DATABASE_URL: mysql://root:root@mariadb/sylius_%kernel.environment%
       MAILER_URL: smtp://mailhog:1025
