Change from mariadb to mysql 5.7

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 /volumes/app/*
 /volumes/mailhog/maildir/*
-/volumes/mariadb/databases/*
-/volumes/mariadb/logs/*
+/volumes/mysql/databases/*
+/volumes/mysql/logs/*
 /volumes/nginx/logs/*
-/volumes/portainer/data/*
